[gd_scene load_steps=5 format=3 uid="uid://7hfan16f6ato"]

[ext_resource type="Script" uid="uid://co3kavqefv0d7" path="res://2fa.gd" id="1_uqn3y"]
[ext_resource type="Script" uid="uid://dowle5kcyix4l" path="res://Scenes/PCUI/window_base.gd" id="2_lqasd"]
[ext_resource type="FontFile" uid="uid://db16gjjdg8f7x" path="res://Assets/Fonts/VT323-Regular.ttf" id="3_l0cdl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2gu3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[node name="2FA" type="Control"]
layout_mode = 3
anchor_left = 0.346
anchor_top = 0.007
anchor_right = 0.675
anchor_bottom = 0.252
offset_left = -16.32
offset_top = -7.56
offset_right = 16.0
offset_bottom = -0.160004
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqn3y")

[node name="WindowBase" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_lqasd")

[node name="PanelContainer" type="PanelContainer" parent="WindowBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u2gu3")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowBase/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_l0cdl")
theme_override_font_sizes/font_size = 40
text = "     Please enter your secret code:"

[node name="LineEdit" type="LineEdit" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResultLabel" type="Label" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"

[node name="Exit" type="Button" parent="WindowBase/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="WindowBase/PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="WindowBase/PanelContainer/Exit" to="." method="_on_exit_pressed"]
